SVG: tdf#95714 stop-color can be defined once too

Change-Id: I8a660281a255d28981e23d3cf30ff6c337f0424d
Reviewed-on: https://gerrit.libreoffice.org/19876
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Armin Le Grand <Armin.Le.Grand@cib.de>